did some changes in Beat Module